front change password

--- a/example-app/public/css/styles.css
+++ b/example-app/public/css/styles.css
@@ -3870,6 +3870,10 @@ fieldset:disabled .btn {
     width: 100%;
 }
 
+.nav-item .active {
+    color: #fff; 
+}
+
 .tab-content > .tab-pane {
     display: none;
 }
