--- a/example-app/public/css/styles.css
+++ b/example-app/public/css/styles.css
@@ -2999,19 +2999,19 @@ fieldset:disabled .btn {
 
 .btn-secondary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #6c757d;
-    --bs-btn-border-color: #6c757d;
+    --bs-btn-bg: #8fc6b2;
+    --bs-btn-border-color: #8fc6b2;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #5c636a;
-    --bs-btn-hover-border-color: #565e64;
+    --bs-btn-hover-bg: #8fc6b2;
+    --bs-btn-hover-border-color: #8fc6b2;
     --bs-btn-focus-shadow-rgb: 130, 138, 145;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #565e64;
-    --bs-btn-active-border-color: #51585e;
+    --bs-btn-active-bg: #8fc6b2;
+    --bs-btn-active-border-color: #8fc6b2;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #6c757d;
-    --bs-btn-disabled-border-color: #6c757d;
+    --bs-btn-disabled-color: #8fc6b2;
+    --bs-btn-disabled-bg: #8fc6b2;
+    --bs-btn-disabled-border-color: #8fc6b2;
 }
 
 .btn-success {
@@ -3022,7 +3022,7 @@ fieldset:disabled .btn {
     --bs-btn-hover-bg: #8fc6b2;
     --bs-btn-hover-border-color: #8fc6b2;
     --bs-btn-focus-shadow-rgb: 60, 153, 110;
-    --bs-btn-active-color: #fff;
+    --bs-btn-active-color: #8fc6b2;
     --bs-btn-active-bg: #8fc6b2;
     --bs-btn-active-border-color: #8fc6b2;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
